packages/components/icon/icon-item-tokens.scss
.kbq-icon-item {
    --kbq-icon-item-size-normal-horizontal-padding: var(--kbq-size-s);
    --kbq-icon-item-size-normal-vertical-padding: var(--kbq-size-s);
    --kbq-icon-item-size-big-horizontal-padding: var(--kbq-size-l);
    --kbq-icon-item-size-big-vertical-padding: var(--kbq-size-l);
    /* THEME TOKENS */
    --kbq-icon-item-filled-fade-off-theme-color: var(--kbq-icon-white);
    --kbq-icon-item-filled-fade-off-theme-background: var(--kbq-background-theme);
    --kbq-icon-item-filled-fade-off-contrast-color: var(--kbq-icon-on-contrast);
    --kbq-icon-item-filled-fade-off-contrast-background: var(--kbq-background-contrast);
    --kbq-icon-item-filled-fade-off-error-color: var(--kbq-icon-white);
    --kbq-icon-item-filled-fade-off-error-background: var(--kbq-background-error);
    --kbq-icon-item-filled-fade-off-warning-color: var(--kbq-icon-white);
    --kbq-icon-item-filled-fade-off-warning-background: var(--kbq-background-warning);
    --kbq-icon-item-filled-fade-off-success-color: var(--kbq-icon-white);
    --kbq-icon-item-filled-fade-off-success-background: var(--kbq-background-success);
    --kbq-icon-item-filled-fade-on-theme-color: var(--kbq-icon-theme);
    --kbq-icon-item-filled-fade-on-theme-background: var(--kbq-background-theme-fade);
    --kbq-icon-item-filled-fade-on-contrast-color: var(--kbq-icon-contrast);
    --kbq-icon-item-filled-fade-on-contrast-background: var(--kbq-background-contrast-fade);
    --kbq-icon-item-filled-fade-on-error-color: var(--kbq-icon-error);
    --kbq-icon-item-filled-fade-on-error-background: var(--kbq-background-error-fade);
    --kbq-icon-item-filled-fade-on-warning-color: var(--kbq-icon-warning);
    --kbq-icon-item-filled-fade-on-warning-background: var(--kbq-background-warning-fade);
    --kbq-icon-item-filled-fade-on-success-color: var(--kbq-icon-success);
    --kbq-icon-item-filled-fade-on-success-background: var(--kbq-background-success-fade);
}

